--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "d3": "^7.9.0",
+    "framer-motion": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.1",
