--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/websocket": "^1.0.10",
     "axios": "^1.7.2",
     "d3": "^7.9.0",
     "framer-motion": "^11.3.0",
@@ -25,7 +26,8 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
-    "sweetalert2": "^11.12.1",
+    "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.12.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
