--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://back.soursop.lat
-REACT_APP_SOCKET_IO_API=https://wss.soursop.lat
-REACT_APP_SHELLY=https://she.soursop.lat
+REACT_APP_API_URL=https://backend.soursop.lat
+REACT_APP_SOCKET_IO_API=https://web.soursop.lat
+REACT_APP_SHELLY=https://shelly.soursop.lat
